[gd_scene load_steps=9 format=3 uid="uid://baeupmwvx1kib"]

[ext_resource type="Texture2D" uid="uid://buxqa7rdfotov" path="res://resources/images/player/player.png" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://dlvhwpsrbw6mc" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="PackedScene" uid="uid://dbthbwirn2glv" path="res://scenes/player/health_bar.tscn" id="3_gmlin"]
[ext_resource type="Script" uid="uid://bqqufaikvwb6f" path="res://scripts/effects/status_effect_manager.gd" id="4_lvxji"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g2els"]
radius = 16.0
height = 108.0

[sub_resource type="Animation" id="Animation_u8vuu"]
resource_name = "player"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3vyb7"]
_data = {
&"player": SubResource("Animation_u8vuu")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_qlg0r"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("SpellCon:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("PlayerSprite:flip_h")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("HealthBar:value")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath("HealthBar:max_value")
properties/5/spawn = true
properties/5/replication_mode = 1

[node name="Player" type="CharacterBody2D"]
physics_interpolation_mode = 1
script = ExtResource("1_g2els")

[node name="PlayerSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_3vyb7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 11)
rotation = -0.00507956
shape = SubResource("CapsuleShape2D_g2els")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_3vyb7")
}

[node name="SpellCon" type="Node2D" parent="."]
position = Vector2(1, 0)

[node name="Marker2D" type="Marker2D" parent="SpellCon"]
position = Vector2(40, 0)

[node name="Line2D" type="Line2D" parent="SpellCon/Marker2D"]
points = PackedVector2Array(0, 0, 25, 0)
width = 3.0

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="HealthBar" parent="." instance=ExtResource("3_gmlin")]
offset_left = -55.0
offset_top = -82.0
offset_right = 45.0
offset_bottom = -67.0

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_qlg0r")

[node name="StatusEffectManager" type="Node2D" parent="."]
script = ExtResource("4_lvxji")
